Fixed line breaks in post text

--- a/social_network/static/social_network/partials/feed.css
+++ b/social_network/static/social_network/partials/feed.css
@@ -3,6 +3,10 @@ a {
     color: unset;
 }
 
+pre {
+    white-space: pre-wrap;
+}
+
 .all_friends {
     display: none;
 }
